chore: updated backend to return email of user

--- a/src/view/verified.html
+++ b/src/view/verified.html
@@ -6,7 +6,7 @@
         <div style="display: flex; font-family: Arial, sans-serif; flex-direction: column; align-items: center; justify-content: center; height: 20vh; background-color: #f0f0f0; padding: 20px 80px; border-radius: 10px;">
             <h1 style="margin-bottom:-10px; font-size: 24px; font-weight: bold;">Email Verified</h1>
             <p>Your email has been verified successfully</p>
-            <a href="https://kols-gamma.vercel.app/" target="_blank" style="color: #000; text-decoration: none; padding: 10px 20px; background-color: black; color: #fff; border-radius: 5px;">Go to 7Kol</a>
+            <a href="https://7app.kolstoken.com/" target="_blank" style="color: #000; text-decoration: none; padding: 10px 20px; background-color: black; color: #fff; border-radius: 5px;">Go to 7Kol</a>
         </div>
     </body>
 </html>
