--- a/src/view/envalidUser.html
+++ b/src/view/envalidUser.html
@@ -5,7 +5,7 @@
     <body style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
         <div style="display: flex; font-family: Arial, sans-serif; flex-direction: column; align-items: center; justify-content: center; height: 20vh; background-color: #f0f0f0; padding: 20px 80px; border-radius: 10px;">
             <p>User Not Found or Already Verified</p>
-            <a href="https://kols-gamma.vercel.app/" target="_blank" style="color: #000; text-decoration: none; padding: 10px 20px; background-color: black; color: #fff; border-radius: 5px;">Go to 7Kol</a>
+            <a href="https://7app.kolstoken.com/" target="_blank" style="color: #000; text-decoration: none; padding: 10px 20px; background-color: black; color: #fff; border-radius: 5px;">Go to 7Kol</a>
         </div>
     </body>
 </html>
